@@ -1,5 +1,11 @@
 2008-08-12  Mike Krüger <mkrueger@novell.com> 
 
+	* Mono.TextEditor/TextEditorOptions.cs,
+	  Mono.TextEditor/DefaultEditActions.cs: fixed "Bug 416089 - Warn
+	  about tabs after non-tabs".
+
+2008-08-12  Mike Krüger <mkrueger@novell.com> 
+
 	* Mono.TextEditor/TextEditor.cs,
 	  Mono.TextEditor/CodeSegmentPreviewWindow.cs: fixed "Bug 405912 -
 	  Dragged text no longer shows preview".
